fix time off center

--- a/html/css/main.css
+++ b/html/css/main.css
@@ -187,7 +187,7 @@ body {
 #phone-time {
     font-family: 'Poppins', sans-serif;
     font-size: 1vh;
-    padding: 2vh 0 0 5.5vh;
+    padding: 2vh 0 0 5.1vh;
     float: left;
     color: white !important;
 }
